<resources>
    <string name="tmo_drive_smart_provider" />
    <string name="carrier_vm_number">*86</string>
    <string name="VoiceQuality">Voice quality</string>
    <string name="vq_summary">Set a voice profile to enhance your listening experience</string>
    <string name="VoiceQualityFlu">Noise suppression</string>
    <string name="vq_flu_summary">Adjust background noise</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access point names</string>
    <string name="voicemail">Voicemail</string>
    <string name="networks">Operator selection</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="autoanswer_gsm_call_settings">Auto answer</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward if busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to {0}</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="labelCFNRy">Forward if unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to {0}</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="labelCFNRc">Forward if unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to {0}</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="label_hac">HAC Mode Settings</string>
    <string name="sum_hac">Hearing aid compatible device settings</string>
    <string name="label_mos">MOS Mode Settings</string>
    <string name="sum_mos">Mean objective score settings</string>
    <string name="label_select_network_dlg">Select network</string>
    <string name="sum_voicemail">Set voicemail number</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="sum_carrier_select">Select a network operator</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="gsmumts_networks">GSM/UMTS settings</string>
    <string name="cdma_networks">CDMA settings</string>
    <string name="cell_broadcast_sms">Cell Broadcast SMS</string>
    <string name="enable_disable_cell_bc_sms">Cell Broadcast SMS</string>
    <string name="cell_bc_sms_enable">Cell Broadcast SMS enabled</string>
    <string name="cell_bc_sms_disable">Cell Broadcast SMS disabled</string>
    <string name="cb_sms_settings">Cell Broadcast SMS settings</string>
    <string name="enable_disable_emergency_broadcast">Emergency Broadcast</string>
    <string name="emergency_broadcast_enable">Emergency Broadcast enabled</string>
    <string name="emergency_broadcast_disable">Emergency Broadcast disabled</string>
    <string name="enable_disable_administrative">Administrative</string>
    <string name="administrative_enable">Administrative enabled</string>
    <string name="administrative_disable">Administrative disabled</string>
    <string name="enable_disable_maintenance">Maintenance</string>
    <string name="maintenance_enable">Maintenance enabled</string>
    <string name="maintenance_disable">Maintenance disabled</string>
    <string name="general_news_settings">General News</string>
    <string name="bf_news_settings">Business and Financial News</string>
    <string name="sports_news_settings">Sports News</string>
    <string name="entertainment_news_settings">Entertainment News</string>
    <string name="enable_disable_local">Local</string>
    <string name="local_enable">Local news enabled</string>
    <string name="local_disable">Local news disabled</string>
    <string name="enable_disable_regional">Regional</string>
    <string name="regional_enable">Regional news enabled</string>
    <string name="regional_disable">Regional news disabled</string>
    <string name="enable_disable_national">National</string>
    <string name="national_enable">National news enabled</string>
    <string name="national_disable">National news disabled</string>
    <string name="enable_disable_international">International</string>
    <string name="international_enable">International news enabled</string>
    <string name="international_disable">International news disabled</string>
    <string name="list_language_title">Language</string>
    <string name="list_language_summary">Select the news language</string>
    <string name="list_language_dtitle">Languages</string>
    <string name="enable_disable_local_weather">Local Weather</string>
    <string name="local_weather_enable">Local Weather enabled</string>
    <string name="local_weather_disable">Local Weather disabled</string>
    <string name="enable_disable_atr">Area Traffic Reports</string>
    <string name="atr_enable">Area Traffic Reports enabled</string>
    <string name="atr_disable">Area Traffic Reports disabled</string>
    <string name="enable_disable_lafs">Local Airport Flight Schedules</string>
    <string name="lafs_enable">Local Airport Flight Schedules enabled</string>
    <string name="lafs_disable">Local Airport Flight Schedules disabled</string>
    <string name="enable_disable_restaurants">Restaurants</string>
    <string name="restaurants_enable">Restaurants enabled</string>
    <string name="restaurants_disable">Restaurants disabled</string>
    <string name="enable_disable_lodgings">Lodgings</string>
    <string name="lodgings_enable">Lodgings enabled</string>
    <string name="lodgings_disable">Lodgings disabled</string>
    <string name="enable_disable_retail_directory">Retail Directory</string>
    <string name="retail_directory_enable">Retail Directory enabled</string>
    <string name="retail_directory_disable">Retail Directory disabled</string>
    <string name="enable_disable_advertisements">Advertisements</string>
    <string name="advertisements_enable">Advertisements enabled</string>
    <string name="advertisements_disable">Advertisements disabled</string>
    <string name="enable_disable_stock_quotes">Stock Quotes</string>
    <string name="stock_quotes_enable">Stock Quotes enabled</string>
    <string name="stock_quotes_disable">Stock Quotes disabled</string>
    <string name="enable_disable_eo">Employment Opportunities</string>
    <string name="eo_enable">Employment Opportunities enabled</string>
    <string name="eo_disable">Employment Opportunities disabled</string>
    <string name="enable_disable_mhh">Medical, Health and Hospital</string>
    <string name="mhh_enable">Medical, Health and Hospital enabled</string>
    <string name="mhh_disable">Medical, Health and Hospital disabled</string>
    <string name="enable_disable_technology_news">Technology News</string>
    <string name="technology_news_enable">Technology News enabled</string>
    <string name="technology_news_disable">Technology News disabled</string>
    <string name="enable_disable_multi_category">Multi-category</string>
    <string name="multi_category_enable">Multi-category enabled</string>
    <string name="multi_category_disable">Multi-category disabled</string>
    <string name="select_network">Select network</string>
    <string name="cdma_system_select_title">System select</string>
    <string name="cdma_system_select_summary">Change the cdma roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System select</string>
    <string name="cdma_subscription_title">CDMA Subscription</string>
    <string name="cdma_subscription_summary">Change between RUIM/SIM and NV</string>
    <string name="cdma_subscription_dialogtitle">subscription</string>
    <string name="fdn">Fixed dialing number</string>
    <string name="sum_fdn">Manage fixed dialing numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto Retry</string>
    <string name="auto_retry_mode_summary">Automatically redial the call if the call fails to connect</string>
    <string name="dtmf_tones_title">DTMF Tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="caller_id_title">Caller ID Readout</string>
    <string name="caller_id_sum">Ring Only</string>
    <string name="qsms_root_title">Text message reply</string>
    <string name="qsms_root_sum">Ignore calls with a text message settings</string>
    <string name="qsms_cb_sum">Enable ignoring calls with a text message</string>
    <string name="qsms_edit_title">Edit messages</string>
    <string name="qsms_edit_sum">View, add, remove or edit text messages</string>
    <string name="show_dp">Show dialpad</string>
    <string name="sum_show_dp">Select when the dialpad will automatically be shown</string>
    <string name="ad_assisted_dialing">Assisted dialing</string>
    <string name="ad_assisted_settings_summary">International dialing while roaming overseas</string>
    <string name="title_voicemail_choose_vmvvm">Set default voicemail</string>
    <string name="sum_voicemail_choose_vmvvm">Set default voicemail, visual voicemail or prompt to always choose</string>
    <string name="title_vvm_roaming_prompt">Set roaming voicemail</string>
    <string name="sum_vvm_roaming_prompt">Set roaming voicemail, visual voicemail or prompt to always choose</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="ip_prefix_title">IP Prefix</string>
    <string name="number_attribution">Number attribution settings</string>
    <string name="sum_location">Number location</string>
    <string name="show_location">Show location</string>
    <string name="update_location_service">Use updated location</string>
    <string name="download_location_service">Download latest location</string>
    <string name="ip_call_settings_title">IP call settings</string>
    <string name="intlroamcb_settings_title">Intl Roam CallBack Settings</string>
    <string name="intlroamcb_prefix_title">Intl Roam CallBack Prefix</string>
    <string name="preferred_networks">Preferred networks</string>
    <string name="sum_preferred_networks">Manage preferred networks list</string>
    <string name="automatic_prefix">Automatic prefix</string>
    <string name="sum_automatic_prefix">Manage automatic prefix</string>
</resources>