<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.CdmaSystemSelectListPreference android:entries="@array/cdma_system_select_choices" android:title="@string/cdma_system_select_title" android:key="cdma_system_select_key" android:summary="@string/cdma_system_select_summary" android:defaultValue="0" android:dialogTitle="@string/cdma_system_select_dialogtitle" android:entryValues="@array/cdma_system_select_values" />
    <com.android.phone.CdmaSubscriptionListPreference android:entries="@array/cdma_subscription_choices" android:title="@string/cdma_subscription_title" android:key="cdma_subscription_key" android:summary="@string/cdma_subscription_summary" android:dialogTitle="@string/cdma_subscription_dialogtitle" android:entryValues="@array/cdma_subscription_values" />
</PreferenceScreen>
